samples/_failures_safe/1761351288_e86c4f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0f8624b.c: In function ‘main’:
./samples/SAFE/__tmp_a0f8624b.c:146:9: error: expected expression at end of input
  146 |         if (scanf("%d %d %d", &u,
      |         ^~
./samples/SAFE/__tmp_a0f8624b.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0f8624b.c:146:9: error: expected declaration or statement at end of input
